src/_css/main.css
/* ... */
.language-grammar .literal {
  font-weight: bold;
}

dark-mode-toggle {
  --dark-mode-toggle-light-icon: url(/_css/img/moon.svg);
  --dark-mode-toggle-dark-icon: url(/_css/img/sun.svg);
  --dark-mode-toggle-color: var(--main-and-footer-link-color);
  --dark-mode-toggle-icon-filter: invert(80%);
  margin-left: 1em;
  position: relative;
  top: 0.4rem;
}

@media (max-width: 770px) {
  :root {
    --offset: 10px;
  }
  body {
    padding: 0;
  }
  #footer {
    background-size: 5em;
    padding-right: 7em;
  }
  ol {
    padding-inline-start: calc(2 * var(--offset));
  }
  li pre {
    width: calc(100% + 4 * var(--offset));
    left: calc(-2 * var(--offset));
  }
  .note pre {
    width: calc(100% + 2.5 * var(--offset) + 1px);
  }
}

@media (max-width: 670px) {
  #header, .compact #header {
    height: auto;
    background: transparent;
    padding: 0;
  }
  #header h1 a {
    position: static;
    display: block;
  }
  #header nav ul {
    position: static;
  }
  #header nav ul, #header nav li {
    display: block;
  }
  #header nav a, #nav-toggle {
    margin-right: 0;
  }
  #header h1 a {
    display: none;
  }
  #header nav .current a {
    background: #333;
    color: #FFF;
  }
  .js #nav-toggle, .js #header nav.show {
    display: block;
  }
  .js #nav-toggle.hide, .js #header nav {
    display: none;
  }
  main nav a[rel="prev"], main nav a[rel="next"] {
    float: none;
    display: block;
    text-align: center;
  }
  #footer {
    background-image: none;
    padding-right: var(--offset);
  }
}

/* https://github.com/PrismJS/prism-themes/blob/master/themes/prism-cb.css
** with custom modifications for increased accessibility/contrast.
**/

.token.comment,
.token.prolog,
.token.doctype,
.token.cdata {
  color: #999;
}

.token.selector,
.token.operator,
.token.punctuation {
  color: #FFF;
}

.token.namespace {
  opacity: .7;
}

.token.tag,
.token.boolean {
  color: var(--orange);
}

.token.atrule,
.token.attr-value,
.token.hex,
.token.string {
  color: #B0C975;
}

.token.property,
.token.entity,
.token.url,
.token.attr-name,
.token.keyword {
  color: #C27628;
}

pre mark .token.property,
pre mark .token.entity,
pre mark .token.url,
pre mark .token.attr-name,
pre mark .token.keyword,
pre mark .token.number,
pre mark .token.operator,
pre mark .token.punctuation {
  color: #333;
}

.token.function,
.token.constant {
  color: #E5A638;
}

.token.variable {
  color: #FDFBA8;
}

.token.number,
.token.regex {
  color: #FCC934;
}

.token.important,
.token.deliminator {
  color: #E45734;
}

.highlight-line {
  display: inline-block;
}

